Add more sounds

--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
     </head>
     <body>
         <h1>Jubicamp Soundboard</h1>
-        <button onclick="new Audio('sounds/dail-up.m4a').play()">Dial Up</button>
+
+        <button onclick="new Audio('sounds/dail-up.m4a').play()">Dial Up (Long)</button>
         <button onclick="new Audio('sounds/multiverse.m4a').play()">Multiverse</button>
         <button onclick="new Audio('sounds/time-warp.m4a').play()">Time Warp</button>
         <button onclick="new Audio('sounds/boom.m4a').play()">Boom</button>
+        <button onclick="new Audio('sounds/horn.m4a').play()">Horn</button>
+        <button onclick="new Audio('sounds/bonk.mp3').play()">Bonk</button>
+        <button onclick="new Audio('sounds/clang.mp3').play()">Clang</button>
+        <button onclick="new Audio('sounds/mii.mp4').play()">Mii Channel (Long)</button>
+        <button onclick="new Audio('sounds/wonker-bonker.mp3').play()">Wonker Bonker</button>
+        <button onclick="new Audio('sounds/samsung-alert.mp3').play()">Samsung Alert</button>
+        <button onclick="new Audio('sounds/wololo.mp3').play()">Wololo</button>
+
         <p>Made by <a href="https://bplaat.nl/">Bas</a> en Benji</p>
     </body>
 </html>
