Add more sounds

--- a/index.html
+++ b/index.html
@@ -9,17 +9,28 @@
     <body>
         <h1>Jubicamp Soundboard</h1>
 
-        <button onclick="new Audio('sounds/dail-up.m4a').play()">Dial Up (Long)</button>
-        <button onclick="new Audio('sounds/multiverse.m4a').play()">Multiverse</button>
-        <button onclick="new Audio('sounds/time-warp.m4a').play()">Time Warp</button>
-        <button onclick="new Audio('sounds/boom.m4a').play()">Boom</button>
+        <h2>Short Sounds</h2>
+        <button onclick="new Audio('sounds/boom.mp3').play()">Boom</button>
         <button onclick="new Audio('sounds/horn.m4a').play()">Horn</button>
+        <button onclick="new Audio('sounds/ahh-run.m4a').play()">Ahh run</button>
+        <button onclick="new Audio('sounds/wait.m4a').play()">Wait what the hell</button>
         <button onclick="new Audio('sounds/bonk.mp3').play()">Bonk</button>
         <button onclick="new Audio('sounds/clang.mp3').play()">Clang</button>
-        <button onclick="new Audio('sounds/mii.mp4').play()">Mii Channel (Long)</button>
         <button onclick="new Audio('sounds/wonker-bonker.mp3').play()">Wonker Bonker</button>
         <button onclick="new Audio('sounds/samsung-alert.mp3').play()">Samsung Alert</button>
-        <button onclick="new Audio('sounds/wololo.mp3').play()">Wololo</button>
+        <button onclick="new Audio('sounds/wololo.mp3').play()">Age of Empires Wololo</button>
+        <button onclick="new Audio('sounds/roblox-oof.mp3').play()">Roblox Oof</button>
+        <button onclick="new Audio('sounds/fart.mp3').play()">Fart</button>
+        <button onclick="new Audio('sounds/virus.mp3').play()">Your computer has virus</button>
+        <button onclick="new Audio('sounds/windows-xp-startup.mp3').play()">Windows XP Startup</button>
+        <button onclick="new Audio('sounds/windows-xp-shutdown.mp3').play()">Windows XP Shutdown</button>
+        <button onclick="new Audio('sounds/windows-xp-error.mp3').play()">Windows XP Error</button>
+
+        <h2>Long Sounds</h2>
+        <button onclick="new Audio('sounds/dail-up.m4a').play()">Dial Up</button>
+        <button onclick="new Audio('sounds/multiverse.m4a').play()">Multiverse</button>
+        <button onclick="new Audio('sounds/time-warp.m4a').play()">Time Warp</button>
+        <button onclick="new Audio('sounds/mii.m4a').play()">Mii Channel</button>
 
         <p>Made by <a href="https://bplaat.nl/">Bas</a> en Benji</p>
     </body>
