Add more sound effects

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <button onclick="new Audio('sounds/wait.m4a').play()">Wait what the hell</button>
         <button onclick="new Audio('sounds/bonk.mp3').play()">Bonk</button>
         <button onclick="new Audio('sounds/clang.mp3').play()">Clang</button>
+        <button onclick="new Audio('sounds/clang-mega.mp3').play()">Clang Mega</button>
+        <button onclick="new Audio('sounds/biem.m4a').play()">Biem</button>
         <button onclick="new Audio('sounds/wonker-bonker.mp3').play()">Wonker Bonker</button>
         <button onclick="new Audio('sounds/samsung-alert.mp3').play()">Samsung Alert</button>
         <button onclick="new Audio('sounds/wololo.mp3').play()">Age of Empires Wololo</button>
@@ -26,12 +28,18 @@
         <button onclick="new Audio('sounds/windows-xp-startup.mp3').play()">Windows XP Startup</button>
         <button onclick="new Audio('sounds/windows-xp-shutdown.mp3').play()">Windows XP Shutdown</button>
         <button onclick="new Audio('sounds/windows-xp-error.mp3').play()">Windows XP Error</button>
+        <button onclick="new Audio('sounds/moments-later.m4a').play()">A few moments later</button>
+        <button onclick="new Audio('sounds/5-hours-later.m4a').play()">5 hours later</button>
+        <button onclick="new Audio('sounds/crickets.m4a').play()">Crickets</button>
+        <button onclick="new Audio('sounds/steek-aan.m4a').play()">Steek aan dat ding</button>
+        <button onclick="new Audio('sounds/wthelly.m4a').play()">What the helly</button>
 
         <h2>Long Sounds</h2>
         <button onclick="new Audio('sounds/dail-up.m4a').play()">Dial Up</button>
         <button onclick="new Audio('sounds/multiverse.m4a').play()">Multiverse</button>
         <button onclick="new Audio('sounds/time-warp.m4a').play()">Time Warp</button>
         <button onclick="new Audio('sounds/mii.m4a').play()">Mii Channel</button>
+        <button onclick="new Audio('sounds/elevator.m4a').play()">Elevator</button>
 
         <h2>Robot Voice</h2>
         <textarea id="robotText" rows="3" cols="40" placeholder="Type text for robot voice..."></textarea>
