Add more game sound effects

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
         <h1>Jubicamp Soundboard</h1>
 
         <h2>Short Sounds</h2>
+        <button onclick="new Audio('sounds/alarm.mp3').play()">Alarm</button>
+        <button onclick="new Audio('sounds/bass-drop.mp3').play()">Bass drop</button>
         <button onclick="new Audio('sounds/boom.mp3').play()">Boom</button>
+        <button onclick="new Audio('sounds/bruh.mp3').play()">Bruh</button>
         <button onclick="new Audio('sounds/horn.m4a').play()">Horn</button>
         <button onclick="new Audio('sounds/ahh.m4a').play()">Ahh</button>
         <button onclick="new Audio('sounds/ahh-run.m4a').play()">Ahh run</button>
@@ -33,6 +36,9 @@
         <button onclick="new Audio('sounds/crickets.m4a').play()">Crickets</button>
         <button onclick="new Audio('sounds/steek-aan.m4a').play()">Steek aan dat ding</button>
         <button onclick="new Audio('sounds/wthelly.m4a').play()">What the helly</button>
+        <button onclick="new Audio('sounds/among-us-reveal.mp3').play()">Among Us Reveal</button>
+        <button onclick="new Audio('sounds/fortnite-dance.mp3').play()">Fortnite Dance</button>
+        <button onclick="new Audio('sounds/fortnite-knocked.mp3').play()">Fortnite Knocked</button>
 
         <h2>Long Sounds</h2>
         <button onclick="new Audio('sounds/dail-up.m4a').play()">Dial Up</button>
