Add even more sounds

--- a/index.html
+++ b/index.html
@@ -33,12 +33,17 @@
         <button onclick="new Audio('sounds/windows-xp-error.mp3').play()">Windows XP Error</button>
         <button onclick="new Audio('sounds/moments-later.m4a').play()">A few moments later</button>
         <button onclick="new Audio('sounds/5-hours-later.m4a').play()">5 hours later</button>
+        <button onclick="new Audio('sounds/2000-years-later.m4a').play()">2000 years later</button>
         <button onclick="new Audio('sounds/crickets.m4a').play()">Crickets</button>
         <button onclick="new Audio('sounds/steek-aan.m4a').play()">Steek aan dat ding</button>
         <button onclick="new Audio('sounds/wthelly.m4a').play()">What the helly</button>
         <button onclick="new Audio('sounds/among-us-reveal.mp3').play()">Among Us Reveal</button>
         <button onclick="new Audio('sounds/fortnite-dance.mp3').play()">Fortnite Dance</button>
         <button onclick="new Audio('sounds/fortnite-knocked.mp3').play()">Fortnite Knocked</button>
+        <button onclick="new Audio('sounds/mario-kart-here-we-go.m4a').play()">Mario Kart Here we go!</button>
+        <button onclick="new Audio('sounds/mario-kart-failure.m4a').play()">Mario Kart Failure</button>
+        <button onclick="new Audio('sounds/sitcom.m4a').play()">Sitcom we will be back</button>
+        <button onclick="new Audio('sounds/ps2-startup.m4a').play()">Playstation 2 startup</button>
 
         <h2>Long Sounds</h2>
         <button onclick="new Audio('sounds/dail-up.m4a').play()">Dial Up</button>
