Add jubicamp lied and make buttons more responsive

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <button onclick="new Audio('sounds/bonk.mp3').play()">Bonk</button>
         <button onclick="new Audio('sounds/clang.mp3').play()">Clang</button>
         <button onclick="new Audio('sounds/clang-mega.mp3').play()">Clang Mega</button>
-        <button onclick="new Audio('sounds/biem.m4a').play()">Biem</button>
+        <button onclick="new Audio('sounds/hard-bass.mp3').play()">Russian Hard Bass</button>
+        <button onclick="new Audio('sounds/biem.mp3').play()">Biem</button>
         <button onclick="new Audio('sounds/wonker-bonker.mp3').play()">Wonker Bonker</button>
         <button onclick="new Audio('sounds/samsung-alert.mp3').play()">Samsung Alert</button>
         <button onclick="new Audio('sounds/wololo.mp3').play()">Age of Empires Wololo</button>
@@ -43,17 +44,24 @@
         <button onclick="new Audio('sounds/mario-kart-here-we-go.m4a').play()">Mario Kart Here we go!</button>
         <button onclick="new Audio('sounds/mario-kart-failure.m4a').play()">Mario Kart Failure</button>
         <button onclick="new Audio('sounds/sitcom.m4a').play()">Sitcom we will be back</button>
+        <button onclick="new Audio('sounds/breaking-news.mp3').play()">Breaking News</button>
+        <button onclick="new Audio('sounds/ps1-startup.m4a').play()">Playstation 1 startup</button>
         <button onclick="new Audio('sounds/ps2-startup.m4a').play()">Playstation 2 startup</button>
+        <button onclick="new Audio('sounds/gamecube-startup.m4a').play()">Gamecube startup</button>
+        <button onclick="new Audio('sounds/nds-startup.m4a').play()">NDS startup</button>
 
         <h2>Long Sounds</h2>
+        <button onclick="new Audio('sounds/jubicamp-lied.mp3').play()">Jubicamp Lied</button>
         <button onclick="new Audio('sounds/dail-up.m4a').play()">Dial Up</button>
         <button onclick="new Audio('sounds/multiverse.m4a').play()">Multiverse</button>
         <button onclick="new Audio('sounds/time-warp.m4a').play()">Time Warp</button>
         <button onclick="new Audio('sounds/mii.m4a').play()">Mii Channel</button>
         <button onclick="new Audio('sounds/elevator.m4a').play()">Elevator</button>
+        <button onclick="new Audio('sounds/homebrew-channel.m4a').play()">Wii Homebrew Channel</button>
 
         <h2>Robot Voice</h2>
         <textarea id="robotText" rows="3" cols="40" placeholder="Type text for robot voice..."></textarea>
+        <br />
         <button id="robotSpeakButton">Speak</button>
 
         <p>Made by <a href="https://bplaat.nl/">Bas</a> en Benji</p>
