Add even more sound effects

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
         <button onclick="new Audio('sounds/ps2-startup.m4a').play()">Playstation 2 startup</button>
         <button onclick="new Audio('sounds/gamecube-startup.m4a').play()">Gamecube startup</button>
         <button onclick="new Audio('sounds/nds-startup.m4a').play()">NDS startup</button>
+        <button onclick="new Audio('sounds/mission-failed.mp3').play()">Mission Failed</button>
+        <button onclick="new Audio('sounds/scream.mp3').play()">Wilhelm scream</button>
+        <button onclick="new Audio('sounds/wow.mp3').play()">Wow</button>
+        <button onclick="new Audio('sounds/sad-violin.mp3').play()">Sad Violin</button>
+        <button onclick="new Audio('sounds/goofy-car.mp3').play()">Goofy Car</button>
+        <button onclick="new Audio('sounds/italian-brainrot-ringtone.mp3').play()">Italian Brainrot Ringtone</button>
 
         <h2>Long Sounds</h2>
         <button onclick="new Audio('sounds/jubicamp-lied.mp3').play()">Jubicamp Lied</button>
